Enhance README with project details and instructions
Expanded README to include features, tech stack, and setup instructions.